testsuite/tests/linear/should_fail/LinearPatSyn2.stderr

LinearPatSyn2.hs:6:9: error:
    • Pattern synonyms do not support linear fields (GHC #18806):
        x %1 -> Maybe x
    • In the declaration for pattern synonym ‘J’
